--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="bucket img2-t2 center">꾸준히 운동하기</div>
         <div class="bucket img1-t2 center">원데이 클래스 참여하기</div>
         <div class="bucket img1-t2 center">커플링 맞추기</div>
-        <div class="bucket img2-t2 center done">독서 습관 들이기</div>
+        <div class="bucket img2-t2 center">독서 습관 들이기</div>
     </div>
 
 </body>
